# notion-ics

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs  sync.rs
