[package]
name = "notion-ics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.4"
icalendar = { version = "0.16.0", features = ["chrono-tz"] }
notion = "0.5.1"
serde = { version = "1.0.195", features = ["derive"] }
tokio = "1.35.1"
